--- a/integrate-it/style.css
+++ b/integrate-it/style.css
@@ -341,6 +341,10 @@ footer {
 /* for smaller screens, use flexbox */
 
 @media (width < 750px) {
+    #pageheader {
+        margin-bottom: 25px;
+    }
+    
     #container {
         display: flex;
         flex-direction: column;
